<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:padding="4dp"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="4dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        android:id="@+id/itemsefareshat"
        android:elevation="5dp"
        app:cardMaxElevation="5dp"
        app:cardBackgroundColor="@color/colorcard"
        tools:ignore="MissingConstraints" >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="12dp"
                android:id="@+id/right_anno"
                android:background="@color/greenpore"
                android:layout_alignParentRight="true"
                android:layout_height="match_parent">

            </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_alignParentRight="true"
            android:id="@+id/rel11"
            android:background="#dcdcdc"
            android:layout_marginRight="13dp"
            android:layout_height="67dp">
            <customviews.CustomTextView
                android:layout_width="wrap_content"
                android:textSize="13dp"
                android:text="@string/id"
                android:layout_alignParentRight="true"
                android:textDirection="rtl"
                android:id="@+id/idd"
                android:padding="3dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginRight="4dp"
                android:layout_height="wrap_content" />
            <customviews.CustomTextView
                android:layout_width="wrap_content"
                android:textSize="14dp"
                android:id="@+id/idtxt"
                android:paddingRight="7dp"
                android:paddingLeft="7dp"
                android:layout_alignRight="@+id/idd"
                android:textDirection="rtl"
                android:layout_marginTop="7dp"
                android:textColor="@color/red2"
                android:layout_marginRight="45dp"
                android:layout_height="wrap_content" />
            <customviews.CustomTextView
                android:layout_width="wrap_content"
                android:textSize="13dp"
                android:text="@string/refrence"
                android:layout_alignParentRight="true"
                android:textDirection="rtl"
                android:id="@+id/reff"
                android:padding="3dp"
                android:layout_below="@+id/idd"
                android:textColor="@color/black"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content" />
            <customviews.CustomTextView
                android:layout_width="wrap_content"
                android:textSize="11dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_alignRight="@+id/reff"
                android:textDirection="rtl"
                android:layout_below="@+id/idtxt"
                android:id="@+id/refrencetxt"
                android:textColor="@color/red"
                android:layout_marginRight="80dp"
                android:layout_height="wrap_content" />
            <View
                android:background="#0a0a0a"
                android:layout_height="0.3dp"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/refrencetxt"
                android:layout_marginLeft="10dp"
                android:layout_width="300dp" />

        </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="13dp"
                android:layout_below="@+id/rel11"
                android:layout_height="60dp">

                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:text="@string/total"
                    android:layout_alignParentRight="true"
                    android:textDirection="rtl"
                    android:id="@+id/price"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:layout_marginRight="4dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="12dp"
                    android:layout_alignRight="@+id/payy"
                    android:textDirection="rtl"
                    android:id="@+id/pricetxt"
                    android:padding="5dp"
                    android:textColor="@color/red"
                    android:layout_marginRight="90dp"
                    android:layout_height="wrap_content" />

                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:text="@string/pay"
                    android:layout_below="@+id/price"
                    android:layout_alignParentRight="true"
                    android:textDirection="rtl"
                    android:id="@+id/payy"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:layout_marginRight="4dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="12dp"
                    android:layout_below="@+id/pricetxt"
                    android:layout_alignRight="@+id/payy"
                    android:textDirection="rtl"
                    android:id="@+id/paytxt"
                    android:padding="5dp"
                    android:textColor="@color/red"
                    android:layout_marginRight="90dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:text="@string/status"
                    android:padding="3dp"
                    android:layout_alignParentRight="true"
                    android:textDirection="rtl"
                    android:layout_below="@+id/payy"
                    android:id="@+id/stss"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:layout_alignRight="@+id/stss"
                    android:textDirection="rtl"
                    android:id="@+id/statustxt"
                    android:padding="4dp"
                    android:layout_below="@+id/paytxt"
                    android:textColor="@color/red"
                    android:layout_marginRight="90dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/add_date"
                    android:layout_alignParentRight="true"
                    android:textDirection="rtl"
                    android:padding="3dp"
                    android:layout_below="@+id/stss"
                    android:id="@+id/addd"
                    android:layout_marginTop="1dp"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:layout_alignRight="@+id/addd"
                    android:textDirection="rtl"
                    android:id="@+id/adddatetxt"
                    android:layout_below="@+id/statustxt"
                    android:padding="3dp"
                    android:textColor="@color/red"
                    android:layout_marginRight="90dp"
                    android:layout_height="wrap_content" />


            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>