<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragment.ProdectFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/mdtp_white"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:background="@color/tab2"
            android:layout_alignParentTop="true"
            android:id="@+id/reltool"
            android:layout_height="55dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/spinner_filter_prodect"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:entries="@array/prodect_filter"
                    android:prompt="@string/spinner_title" />
                <Spinner
                    android:id="@+id/spinner_filter_shart"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="80dp"
                    android:entries="@array/shart_filter"
                    android:prompt="@string/spinner_title" />
                <customviews.CustomEditText2
                    android:layout_width="120dp"
                    android:textDirection="rtl"
                    android:visibility="gone"
                    android:hint="@string/search_test"
                    android:id="@+id/value_prodect"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="160dp"
                    android:layout_height="wrap_content" />
                <customviews.CustomButton
                    android:layout_width="110dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="170dp"
                    android:padding="1dp"
                    android:id="@+id/selectdate_btn"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_back"
                    android:text="@string/selectdate"
                    android:layout_height="30dp" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_search_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/serach_btn_prodect"
                    android:background="@color/tab2"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/reltool"
            android:layout_height="match_parent">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swiprefreshprodect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="55dp">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/prodectrecyc"
                    android:clipToPadding="false"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:background="@drawable/catstile"
                    android:scrollbars="vertical"
                    android:layout_height="match_parent"/>

            </android.support.v4.widget.SwipeRefreshLayout>
        </RelativeLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/flbaddprodect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:src="@drawable/ic_add_black_24dp"
            app:fabSize="normal" />


    </RelativeLayout>

</FrameLayout>
