<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@drawable/grdnt">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/usrusr"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/usrusr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:gravity="center"
                    android:background="#00c7c7c7"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textDirection="rtl"
                    android:inputType="text"
                    android:textColor="#fff"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_vpn_key_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/pswrdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:background="#00c7c7c7"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:hint="********"
                    android:textDirection="rtl"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <net.igenius.customcheckbox.CustomCheckBox
                    android:layout_width="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/save"
                    android:id="@+id/save_pass_ckb"
                    android:textColor="#003cff"
                    android:layout_height="20dp" />
                <customviews.CustomTextView3
                    android:layout_width="wrap_content"
                    android:text="@string/save"
                    android:textColor="#ffff"
                    android:paddingRight="10dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="20dp">
        <ProgressBar
            android:id="@+id/progressBar2"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:textDirection="rtl">

        <customviews.CustomTextView
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:background="#009a9a"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="400dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ibytes"
            />
    </LinearLayout>
</RelativeLayout>